--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
@@ -30,8 +30,8 @@
     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="0" Background="#90D9FA">
         <Grid KeyboardNavigation.TabNavigation="Cycle" Background="Transparent">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Border Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3, 3, 1.5, 3" Background="#90D9FA">
                 <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3">
@@ -57,9 +57,9 @@
                             </GroupBox.Template>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="180" />
-                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
