--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -4,7 +4,6 @@
                               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                               xmlns:generalConfig="clr-namespace:DigimonWorld.Frontend.WPF.Windows.GeneralConfig"
-                              xmlns:system="clr-namespace:System;assembly=System.Runtime"
                               xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
                               mc:Ignorable="d"
                               d:DataContext="{d:DesignInstance Type=generalConfig:GeneralConfigWindowViewModel, IsDesignTimeCreatable=True}"
@@ -28,13 +27,8 @@
                 <ResourceDictionary Source="./Styles/SaveButtonStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <system:Double x:Key="WindowButtonWidth">70</system:Double>
         </ResourceDictionary>
     </baseClasses:BaseDialogWindow.Resources>
-
-    <Window.InputBindings>
-        <KeyBinding Key="Escape" Command="{Binding CloseCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-    </Window.InputBindings>
 
     <Border Background="Transparent" Panel.ZIndex="1" KeyboardNavigation.TabNavigation="None">
         <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" SnapsToDevicePixels="True" UseLayoutRounding="True">
@@ -56,52 +50,59 @@
                             </Border>
                         </Border>
 
-                        <Grid Grid.Row="2"  Background="#90D9FA">
+                        <Grid Grid.Row="2" Background="#90D9FA">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <Border Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="1.5">
+                            <Border Grid.Column="0" KeyboardNavigation.TabNavigation="None" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="1.5">
                                 <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
-                                    <StackPanel  Orientation="Vertical" VerticalAlignment="Center" Margin="0,10">
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="40"
-                                                Width="150"
-                                                HorizontalAlignment="Center"
+                                    <Grid Margin="0,10">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+
+                                        <Button Grid.Row="0"
+                                                Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Padding="10"
                                                 Content="HOME"
                                                 Command="{Binding ShowHomeConfigurationSectionCommand}"
                                                 Tag="{Binding HomeConfigurationSectionIsSelected}" />
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="40"
-                                                Width="150"
-                                                HorizontalAlignment="Center"
+
+                                        <Button Grid.Row="1"
+                                                Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Padding="10"
                                                 Content="MUSIC PLAYER"
                                                 Command="{Binding ShowMusicPlayerConfigurationSectionCommand}"
                                                 Tag="{Binding MusicPlayerConfigurationSectionIsSelected}" />
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="40"
-                                                Width="150"
-                                                HorizontalAlignment="Center"
+
+                                        <Button Grid.Row="2"
+                                                Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Padding="10"
                                                 Content="NARRATION"
                                                 Command="{Binding ShowNarrationConfigurationSectionCommand}"
                                                 Tag="{Binding NarrationConfigurationSectionIsSelected}" />
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="40"
-                                                Width="150"
-                                                HorizontalAlignment="Center"
+
+                                        <Button Grid.Row="3"
+                                                Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Padding="10"
                                                 Content="MOD / PATCHES"
                                                 Command="{Binding ShowEvolutionConfigurationSectionCommand}"
                                                 Tag="{Binding EvolutionConfigurationSectionIsSelected}" />
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="40"
-                                                Width="150"
-                                                HorizontalAlignment="Center"
+
+                                        <Button Grid.Row="4"
+                                                Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Padding="10"
                                                 Content="EMULATOR LINK"
                                                 Command="{Binding ShowEmulatorLinkConfigurationSectionCommand}"
                                                 Tag="{Binding EmulatorLinkConfigurationSectionIsSelected}" />
-                                    </StackPanel>
+                                    </Grid>
                                 </Border>
                             </Border>
                             <Border Grid.Row="0" Grid.Column="2" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="1.5">
@@ -113,17 +114,17 @@
 
                         <Border Grid.Row="4" Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="1.5">
                             <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
-                                <Button Style="{StaticResource DefaultButtonStyle}"
-                                        Height="{StaticResource DefaultButtonHeight}"
-                                        Width="{StaticResource WindowButtonWidth}"
-                                        Margin="0, 10, 0, 10"
-                                        Content="Close"
-                                        Command="{Binding CloseCommand}">
-                                    <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}"
-                                                 Content="Exit this window (hotkey: ESC)" />
-                                    </Button.ToolTip>
-                                </Button>
+                                <Grid Grid.IsSharedSizeScope="True">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" SharedSizeGroup="Buttons" />
+                                        <ColumnDefinition Width="Auto" SharedSizeGroup="Buttons" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Button Grid.Column="1" Style="{StaticResource DefaultButtonStyle}" Margin="5" Padding="10" Content="Close" Command="{Binding CloseCommand}" IsCancel="True" />
+                                    <Button Grid.Column="2" Style="{StaticResource DefaultButtonStyle}" Margin="5" Padding="10" Content="Save" Command="{Binding SaveCommand}" />
+                                </Grid>
                             </Border>
                         </Border>
                     </Grid>
