--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/EmulatorLinkConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/EmulatorLinkConfigurationSection.xaml
@@ -22,15 +22,14 @@
                 <ResourceDictionary Source="../Styles/SaveButtonStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <system:Double x:Key="OptionWidth">75</system:Double>
-            <system:Double x:Key="OptionHeight">24</system:Double>
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+
+    <Grid HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
@@ -41,28 +40,25 @@
                 <RowDefinition Height="65" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="* Emulator:" Margin="0, 0, 5, 0" />
-            <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource DefaultLabelStyle}" Content="{Binding SelectedEmulatorProcessName }" Margin="0, 0, 5, 0" />
-            <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource DefaultButtonStyle}" 
+            <TextBlock Grid.Row="0" Grid.Column="1"
+                       Text="{Binding SelectedEmulatorProcessName}"
+                       TextTrimming="CharacterEllipsis"
+                       TextWrapping="Wrap"
+                       MaxWidth="205"
+                       VerticalAlignment="Center"
+                       Margin="0,0,5,0" />
+            <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource DefaultButtonStyle}"
                     Command="{Binding OpenEmulatorSelectorCommand}"
-                    Content="Select emulator" 
-                    Height="{StaticResource DefaultButtonHeight}"
-                    Width="120"
-                    HorizontalAlignment="Center"/>
+                    Content="Select emulator"
+                    Margin="0,10,0,0"
+                    Padding="10"
+                    HorizontalAlignment="Center" />
         </Grid>
-
-        <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource DefaultButtonStyle}"
-                Height="{StaticResource DefaultButtonHeight}"
-                Width="{StaticResource WindowButtonWidth}"
-                Content="Save"
-                Command="{Binding SaveCommand}">
-            <Button.ToolTip>
-                <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Save and apply the current configuration." />
-            </Button.ToolTip>
-        </Button>
     </Grid>
 </UserControl>
