--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/EvolutionConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/EvolutionConfigurationSection.xaml
@@ -30,26 +30,26 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Style="{StaticResource DefaultLabelStyle}" Content="* Original or mod" Margin="0, 0, 5, 0" />
+            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Style="{StaticResource DefaultLabelStyle}" Content="* Original or mod" Margin="0, 0, 5, 10" />
             <WrapPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0, 0, 0, 10">
                 <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                         Height="{StaticResource OptionHeight}"
@@ -67,9 +67,9 @@
 
             <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Style="{StaticResource DefaultLabelStyle}" Content="* Optional Vice patches (Vice only)"
                    Margin="0, 0, 5, 0" />
-            <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" 
-                   Content="Myotismon:" 
-                   Margin="0, 0, 5, 0" 
+            <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}"
+                   Content="Myotismon:"
+                   Margin="0, 0, 5, 0"
                    IsEnabled="{Binding GameVariantContainsVice}" />
             <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
                 <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
@@ -88,8 +88,8 @@
                         IsEnabled="{Binding GameVariantContainsVice}" />
             </StackPanel>
 
-            <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" 
-                   Content="Panjyamon:" 
+            <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}"
+                   Content="Panjyamon:"
                    Margin="0, 0, 5, 0"
                    IsEnabled="{Binding GameVariantContainsVice}" />
             <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
@@ -109,15 +109,5 @@
                         IsEnabled="{Binding GameVariantContainsVice}" />
             </StackPanel>
         </Grid>
-
-        <Button Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource DefaultButtonStyle}"
-                Height="{StaticResource DefaultButtonHeight}"
-                Width="{StaticResource WindowButtonWidth}"
-                Content="Save"
-                Command="{Binding SaveCommand}">
-            <Button.ToolTip>
-                <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Save and apply the current configuration." />
-            </Button.ToolTip>
-        </Button>
     </Grid>
 </UserControl>
