--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/HomeConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/HomeConfigurationSection.xaml
@@ -9,7 +9,7 @@
              Width="{StaticResource ConfigurationSectionWidth}"
              d:DataContext="{d:DesignInstance Type=generalConfig:GeneralConfigWindowViewModel, IsDesignTimeCreatable=True}">
 
-    <Grid>
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock TextAlignment="Left"
                    TextWrapping="Wrap"
                    Margin="0, 0, 6,0">
