--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/MusicPlayerConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/MusicPlayerConfigurationSection.xaml
@@ -29,10 +29,10 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
@@ -41,11 +41,10 @@
                 <RowDefinition Height="25" />
                 <RowDefinition Height="25" />
                 <RowDefinition Height="25" />
-                <RowDefinition Height="65" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Volume:" Margin="0, 0, 5, 0" />
@@ -123,15 +122,5 @@
                         Tag="{Binding DoNothingOnCloseWindow}" />
             </StackPanel>
         </Grid>
-
-        <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource SaveButtonStyle}"
-                Height="{StaticResource DefaultButtonHeight}"
-                Width="{StaticResource WindowButtonWidth}"
-                Content="Save"
-                Command="{Binding SaveCommand}">
-            <Button.ToolTip>
-                <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Save and apply the current configuration." />
-            </Button.ToolTip>
-        </Button>
     </Grid>
 </UserControl>
