--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/NarrationConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/NarrationConfigurationSection.xaml
@@ -27,23 +27,21 @@
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+
+    <Grid HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="25" />
-                <RowDefinition Height="25" />
-                <RowDefinition Height="25" />
-                <RowDefinition Height="25" />
-                <RowDefinition Height="25" />
-                <RowDefinition Height="65" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="* Narrator mode:" Margin="0, 0, 5, 0" />
@@ -62,15 +60,5 @@
                         Tag="{Binding IsNarratorModeInstant}" />
             </StackPanel>
         </Grid>
-
-        <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource DefaultButtonStyle}"
-                Height="{StaticResource DefaultButtonHeight}"
-                Width="{StaticResource WindowButtonWidth}"
-                Content="Save"
-                Command="{Binding SaveCommand}">
-            <Button.ToolTip>
-                <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Save and apply the current configuration." />
-            </Button.ToolTip>
-        </Button>
     </Grid>
 </UserControl>
