--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/WeightTopic/WeightTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/WeightTopic/WeightTopicUserControl.xaml
@@ -101,7 +101,7 @@
             <Border Grid.Row="0" Grid.Column="0" CornerRadius="8" BorderBrush="Black" BorderThickness="3" Margin="10" Padding="0" Background="Black">
                 <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
-                        <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10,0" Background="{StaticResource DefaultBackGroundColor}">
+                        <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="5,0" Background="{StaticResource DefaultBackGroundColor}">
                             <StackPanel>
                                 <Label VerticalAlignment="Top" Height="40" Width="120" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
                                     MORE INFO
@@ -110,7 +110,7 @@
                                 <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Padding="0,10"
                                         Content="Guide: Weight"
                                         Command="{Binding OpenGuideFoodChapterCommand}">
                                     <Button.ToolTip>
@@ -121,7 +121,7 @@
                                 <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Padding="0,10"
                                         Content="Excel: Digimon Raise"
                                         Command="{Binding OpenDigimonRaiseDataSheetCommand}">
                                     <Button.ToolTip>
@@ -132,7 +132,7 @@
                                 <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Padding="0,10"
                                         Content="Excel: Food"
                                         Command="{Binding OpenFoodDataSheetCommand}">
                                     <Button.ToolTip>
