--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
@@ -5,12 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:main="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main"
-        xmlns:historicEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.HistoricEvolutionPicker"
-        xmlns:navigation="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.Navigation"
-        xmlns:system="clr-namespace:System;assembly=System.Runtime"
-        xmlns:emulatorLink="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EmulatorLink"
+        xmlns:panes="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.Panes"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=main:MainWindowViewModel, IsDesignTimeCreatable=True}"
+        d:DesignWidth="1200"
+        d:DesignHeight="600"
         Title="Digimon World Tool"
         Icon="pack://application:,,,/Frontend.WPF;component/Images/Misc/Icon.jpg"
         ResizeMode="NoResize"
@@ -25,75 +24,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            <GridLength x:Key="PanelLabelThickness">45</GridLength>
-            <GridLength x:Key="BottomPanelHeight">475</GridLength>
-            <system:Double x:Key="BottomPanelYOffset">-475</system:Double>
-            <GridLength x:Key="LeftPanelWidth">120</GridLength>
-            <system:Double x:Key="LeftPanelYOffset">120</system:Double>
-            <GridLength x:Key="RightPanelWidth">420</GridLength>
-            <system:Double x:Key="RightPanelYOffset">-420</system:Double>
-
-            <BitmapImage x:Key="ClosedLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-no-focus.png" />
-            <BitmapImage x:Key="OpenLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-focus.png" />
-            <BitmapImage x:Key="ClosedBottomPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-bottom-no-focus.png" />
-            <BitmapImage x:Key="OpenBottomPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-bottom-focus.png" />
-            <BitmapImage x:Key="ClosedRightPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-right-no-focus.png" />
-            <BitmapImage x:Key="OpenRightPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-right-focus.png" />
-
-            <Style x:Key="LeftPaneLabelStyle" TargetType="Image">
-                <Setter Property="Source" Value="{StaticResource ClosedLeftPaneImage}" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                        <Setter Property="Source" Value="{StaticResource OpenLeftPaneImage}" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-
-            <Style x:Key="BottomPaneLabelStyle" TargetType="Image">
-                <Setter Property="Source" Value="{StaticResource ClosedBottomPaneImage}" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
-                        <Setter Property="Source" Value="{StaticResource OpenBottomPaneImage}" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-
-            <Style x:Key="RightPaneLabelStyle" TargetType="Image">
-                <Setter Property="Source" Value="{StaticResource ClosedRightPaneImage}" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding RightPaneIsOpen}" Value="True">
-                        <Setter Property="Source" Value="{StaticResource OpenRightPaneImage}" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-
-            <Storyboard x:Key="OpenLeftPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="10" Duration="0:0:0.3" />
-            </Storyboard>
-            <Storyboard x:Key="CloseLeftPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="{StaticResource LeftPanelYOffset}" Duration="0:0:0.3" />
-            </Storyboard>
-
-            <Storyboard x:Key="OpenBottomPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
-                                 To="-12" Duration="0:0:0.3" />
-            </Storyboard>
-            <Storyboard x:Key="CloseBottomPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
-                                 To="{StaticResource BottomPanelYOffset}" Duration="0:0:0.3" />
-            </Storyboard>
-
-            <Storyboard x:Key="OpenRightPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="-12" Duration="0:0:0.3" />
-            </Storyboard>
-            <Storyboard x:Key="CloseRightPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="{StaticResource RightPanelYOffset}" Duration="0:0:0.3" />
-            </Storyboard>
         </ResourceDictionary>
     </Window.Resources>
 
@@ -383,237 +313,10 @@
             </Border>
         </Border>
 
-        <Grid Grid.Row="1" Grid.Column="0" Background="Transparent" VerticalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True" Panel.ZIndex="0">
-            <Grid.RenderTransform>
-                <TranslateTransform X="{StaticResource LeftPanelYOffset}" />
-            </Grid.RenderTransform>
+        <panes:NavigationLeftPane Grid.Row="1" Grid.Column="0" />
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{StaticResource PanelLabelThickness}"></ColumnDefinition>
-                <ColumnDefinition Width="{StaticResource LeftPanelWidth}"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+        <panes:HistoricEvolutionsBottomPane Grid.Row="2" Grid.Column="1" />
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="400"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Border Grid.Row="0" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
-                <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Padding="0">
-                    <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Margin="0" Padding="0">
-                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0">
-                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#80202020">
-                                <navigation:NavigationUserControl HorizontalAlignment="Center" VerticalAlignment="Center" />
-                            </Border>
-                        </Border>
-                    </Border>
-                </Border>
-            </Border>
-
-            <Grid Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Background="Transparent">
-                <Image Style="{StaticResource LeftPaneLabelStyle}" Margin="0,0, -2, 0">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleLeftPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Image>
-
-                <TextBlock Text="N&#x0a;a&#x0a;v&#x0a;i&#x0a;g&#x0a;a&#x0a;t&#x0a;i&#x0a;o&#x0a;n"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           FontWeight="Bold"
-                           TextAlignment="Center">
-
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
-                            <Setter Property="FontWeight" Value="Bold" />
-                            <Setter Property="Foreground" Value="#D6D6D8" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                                    <Setter Property="Foreground" Value="Black" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleLeftPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </TextBlock>
-            </Grid>
-
-            <Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource OpenLeftPane}" />
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard Storyboard="{StaticResource CloseLeftPane}" />
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-        </Grid>
-
-        <Grid Grid.Row="2" Grid.Column="1" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True" RenderTransformOrigin="0.5,0.5" Panel.ZIndex="0">
-            <Grid.RenderTransform>
-                <TranslateTransform Y="{StaticResource BottomPanelYOffset}" />
-            </Grid.RenderTransform>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="{StaticResource BottomPanelHeight}"></RowDefinition>
-                <RowDefinition Height="{StaticResource PanelLabelThickness}"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Border Grid.Row="0" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
-                <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Padding="0">
-                    <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0">
-                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0">
-                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10" Background="#2E3841">
-                                <historicEvolutionPicker:HistoricEvolutionPickerUserControl VerticalAlignment="Center" />
-                            </Border>
-                        </Border>
-                    </Border>
-                </Border>
-            </Border>
-
-            <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Background="Transparent">
-                <Image Style="{StaticResource BottomPaneLabelStyle}" Margin="0,-2, 0, 0">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Image>
-
-                <TextBlock Text="Historic Evolutions"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           FontWeight="Bold"
-                           TextAlignment="Center">
-
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
-                            <Setter Property="FontWeight" Value="Bold" />
-                            <Setter Property="Foreground" Value="#D6D6D8" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
-                                    <Setter Property="Foreground" Value="Black" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </TextBlock>
-            </Grid>
-
-            <Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource OpenBottomPane}" />
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard Storyboard="{StaticResource CloseBottomPane}" />
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-        </Grid>
-        
-        <Grid Grid.Row="1" Grid.Column="3" Background="Transparent" VerticalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True" Panel.ZIndex="0">
-            <Grid.RenderTransform>
-                <TranslateTransform X="{StaticResource RightPanelYOffset}" />
-            </Grid.RenderTransform>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{StaticResource RightPanelWidth}"></ColumnDefinition>
-                <ColumnDefinition Width="{StaticResource PanelLabelThickness}"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Border Grid.Row="0" Grid.Column="0" Background="Transparent" Panel.ZIndex="1">
-                <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Padding="0">
-                    <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Margin="0" Padding="0">
-                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0">
-                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#2E3841">
-                                <emulatorLink:EmulatorLinkUserControl HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 10, 10, 10"/>
-                            </Border>
-                        </Border>
-                    </Border>
-                </Border>
-            </Border>
-
-            <Grid Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Background="Transparent">
-                <Image Style="{StaticResource RightPaneLabelStyle}" Margin="-2,0, 0, 0">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleRightPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Image>
-
-                <TextBlock Text="E&#x0a;m&#x0a;u&#x0a;l&#x0a;a&#x0a;t&#x0a;o&#x0a;r&#x0a; &#x0a;L&#x0a;i&#x0a;n&#x0a;k"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           FontWeight="Bold"
-                           TextAlignment="Center">
-
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
-                            <Setter Property="FontWeight" Value="Bold" />
-                            <Setter Property="Foreground" Value="#D6D6D8" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding RightPaneIsOpen}" Value="True">
-                                    <Setter Property="Foreground" Value="Black" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleRightPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </TextBlock>
-            </Grid>
-
-            <Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding RightPaneIsOpen}" Value="True">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource OpenRightPane}" />
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard Storyboard="{StaticResource CloseRightPane}" />
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-        </Grid>
+        <panes:EmulatorLinkRightPane Grid.Row="1" Grid.Column="3" />
     </Grid>
 </Window>
